Fix the spacing on empty panels.

--- a/plugins/layouts/wwm_user_layout_special/wwm_user_layout_special.scss
+++ b/plugins/layouts/wwm_user_layout_special/wwm_user_layout_special.scss
@@ -60,13 +60,13 @@
 /* These are the rules that set the layout in the real page  */
 .wwm-user-layout-special {
 	.main,
-	.main,
 	.content-area,
 	.sub-footer,
 	.footer {
 		display: flex;
 		width: 100%;
 		flex-flow: row wrap;
+		align-content: flex-start;
 	}
 
 	.sidebar {
